# rss-reader

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.yaml  docker-compose.test.yml  docker-compose.yml  setup.cfg
rss-reader/: .env.example  Dockerfile  alembic.ini  docker-compose.test.yml  docker-compose.yml  feeds.yaml  pyproject.toml  requirements.txt  rss_api.dockerfile  rss_parser.dockerfile  server.dockerfile  server.dockerfile.test  worker.dockerfile
rss-reader/docker-images/: rss-api.dockerfile  rss-api.dockerfile.test  rss-parser.dockerfile
rss-reader/migrations/: env.py
rss-reader/migrations/versions/: 02ea03a5ada0_rename_last_read_at_to_last_new_posts_.py  13387d511936_create_posts_table.py  5ba9cd4297ea_add_ondelete_to_fks.py  948ea6926116_add_rss_column_on_rss_feeds.py  a33a0c070f87_add_etag_to_rss_feeds.py  c88375693a39_split_last_new_posts_at_to_last_parsed_.py  cca62cbe5aad_create_users_table.py  ccef88865712_add_icon_column_on_rss_feeds.py  d8852d1c3af6_add_posts_last_week_to_rss_feeds.py  d8fa81723cf3_create_categories_table.py  e72c674d904a_create_rss_feeds_table.py  f2ef3bbe6225_add_created_at_to_posts.py  f54ad347fde1_add_created_at_last_read_at_to_rss_feeds.py
rss-reader/rss_reader/: config.py  database.py  init_data.py  main.py  prestart.sh  schemas.py  security.py  utils.py  worker.py
rss-reader/rss_reader/api/: api.py  deps.py  endpoints.py  post.py  rss_feed.py
rss-reader/rss_reader/crud/: __init__.py  (+3 more)
rss-reader/scripts/: init_data.py  rss-api-start.sh  rss-parser-start.sh  run-tests.sh  server-start.sh
(+78 files in other folders)
