[tool.poetry]
name = "rss-reader"
version = "0.1.0"
description = ""
authors = ["mrr2d2 <alaksandr.lavoncyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "0.68"
SQLAlchemy = "1.4"
alembic = "1.7"
celery = "5.1"
lxml = "4.6"
PyYAML = "6.0"
beautifulsoup4 = "4.10"
feedparser = "6.0"
requests = "2.26"
redis = "3.5"
uvicorn = "0.15"
psycopg2-binary = "2.9"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
Faker = "9.8"
factory-boy = "3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
